--- a/Week 1/Day 1/Practice/Portfolio/Index.html
+++ b/Week 1/Day 1/Practice/Portfolio/Index.html
@@ -57,7 +57,7 @@
         <h3>Social Snakes</h3>
     </div>
     <div id="spn">
-        <img id="app" src="left2.png" alt="app">
+        <img id="app" src="spn.png" alt="app">
     </div>
     <div>
         <p>Social Media App made in Python <a href="#">code</a> | <a href="#">deployed</a></p>
