core_Profile_Page

--- a/Week 2/Day 3/Core/Profile Page/index.html
+++ b/Week 2/Day 3/Core/Profile Page/index.html
@@ -73,21 +73,21 @@
                         <div class="content">
                             <div class="jpg">
                                 <img src="images/todd-s.jpg" class="images" alt="todd">
-                                <h4>Todd E</h4>
+                                <a href="#"><h4>Todd E</h4></a>
                             </div>
                             <div class="jpg">
-                                <img src="icons/accept-circle.png" class="icones" alt="Yes">
-                                <img src="icons/close-circle.png" class="icones" alt="No">
+                                <a href="#"><img src="icons/accept-circle.png" class="icones" alt="Yes"></a>
+                                <a href="#"><img src="icons/close-circle.png" class="icones" alt="No"></a>
                             </div>
                         </div>
                         <div class="content">
                             <div class="jpg">
                                 <img src="images/phil-s.jpg" class="images" alt="phil">
-                                <h4>Phil K</h4>
+                                <a href="#"><h4>Phil K</h4></a>
                             </div>
                             <div class="jpg">
-                                <img src="icons/accept-circle.png" class="icones" alt="Yes">
-                                <img src="icons/close-circle.png" class="icones" alt="No">
+                                <a href="#"><img src="icons/accept-circle.png" class="icones" alt="Yes"></a>
+                                <a href="#"><img src="icons/close-circle.png" class="icones" alt="No"></a>
                             </div>
                         </div>
                     </div>
@@ -103,15 +103,15 @@
                 <div class="text4">
                     <div class="jpg">
                         <img src="images/adrien-s.jpg" class="images" alt="adrien">
-                        <h4>Adrien D</h4>
+                        <a href="#"><h4>Adrien D</h4></a>
                     </div>
                     <div class="jpg">
                         <img src="images/anne-s.jpg" class="images" alt="anne">
-                        <h4>Anne J</h4>
+                        <a href="#"><h4>Anne J</h4></a>
                     </div>
                     <div class="jpg">
                         <img src="images/alayne-s.jpg" class="images" alt="alayne">
-                        <h4>Alayne T</h4>
+                        <a href="#"><h4>Alayne T</h4></a>
                     </div>
                 </div>
                 <div class="footer1">
