--- a/Week 2/Day 3/Core/Profile Page/index.html
+++ b/Week 2/Day 3/Core/Profile Page/index.html
@@ -12,9 +12,9 @@
             <div class="nav1">
                 <h1>Profile</h1>
                 <ul class="list">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#" id="home">Home</a></li>
                     <li><a href="index.html" id="prof">My Profile</a></li>
-                    <li><a href="#">Find Connections</a></li>
+                    <li><a href="#" id="connection">Find Connections</a></li>
                 </ul>
             </div>
             <button type="submit" id="btn">Signe Out</button>
