--- a/Week 2/Day 3/Core/Profile Page/index.html
+++ b/Week 2/Day 3/Core/Profile Page/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="text2">
                     <h2>Coding Haji - Full Stack Bootcamp</h2>
-                    <p>Dec 2019 - Mar 2020</p>
+                    <p id="date">Dec 2019 - Mar 2020</p>
                     <P>Triple black belt in Python, MERN, and C#...</P>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                         <div class="content">
                             <div class="jpg">
                                 <img src="images/todd-s.jpg" class="images" alt="todd">
-                                <a href="#"><h4>Todd E</h4></a>
+                                <h4>Todd E</h4>
                             </div>
                             <div class="jpg">
                                 <a href="#"><img src="icons/accept-circle.png" class="icones" alt="Yes"></a>
@@ -83,7 +83,7 @@
                         <div class="content">
                             <div class="jpg">
                                 <img src="images/phil-s.jpg" class="images" alt="phil">
-                                <a href="#"><h4>Phil K</h4></a>
+                                <h4>Phil K</h4>
                             </div>
                             <div class="jpg">
                                 <a href="#"><img src="icons/accept-circle.png" class="icones" alt="Yes"></a>
@@ -103,15 +103,15 @@
                 <div class="text4">
                     <div class="jpg">
                         <img src="images/adrien-s.jpg" class="images" alt="adrien">
-                        <a href="#"><h4>Adrien D</h4></a>
+                        <h4>Adrien D</h4>
                     </div>
                     <div class="jpg">
                         <img src="images/anne-s.jpg" class="images" alt="anne">
-                        <a href="#"><h4>Anne J</h4></a>
+                        <h4>Anne J</h4>
                     </div>
                     <div class="jpg">
                         <img src="images/alayne-s.jpg" class="images" alt="alayne">
-                        <a href="#"><h4>Alayne T</h4></a>
+                        <h4>Alayne T</h4>
                     </div>
                 </div>
                 <div class="footer1">
