--- a/Week 2/Day 3/Core/Button Clicker/index.html
+++ b/Week 2/Day 3/Core/Button Clicker/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="right">
                 <div class="add">
-                    <h2>Dojonary <br> is defined by <strong>YOU</strong></h2>
+                    <h2>Dojonary <br> is defined by <span>YOU</span></h2>
                     <button id="definition" onclick="hide(this)">Add Definition</button>
                 </div>
             </div>
